# mnecrafttools

./: .gitignore  README.md  index.html
.agent/rules/: general.md
css/: style.css
js/: app.js
js/tools/: building-shapes.js  coordinate-calculator.js  distance-calculator.js  nether-portal.js  slime-radar.js
rust-cli/: Cargo.toml
rust-cli/src/: main.rs  structures.rs
rust-cli/src/algorithms/: biome.rs  mod.rs
server/: database.py  main.py  requirements.txt
server/routers/: bookmarks.py  jobs.py  seeds.py
server/templates/: index.html
