[package]
name = "bedrockmate-cli"
version = "1.0.0"
edition = "2021"
authors = ["BedrockMate Team"]
description = "Minecraft Bedrock Edition structure finder CLI"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

[[bin]]
name = "bedrockmate"
path = "src/main.rs"
